<resources>
  <string name="app_name">Reto02</string>


  <!--  strings del activity_login -->
  <string name="login_title">Bienvenidos todos a la pizza</string>
  <string name="email_hint">Correo electrónico registrado</string>
  <string name="password_hint">Contraseña</string>
  <string name="login_button">Iniciar sesión</string>
  <string name="register_button">Registrar</string>

  <!--  strings del activity_home -->

  <!-- Definición de price_format -->
  <string name="price_format">%.2f</string>
  <!-- Otros Strings del activity_main-->
  <string name="hint_id">ID</string>
  <string name="hint_name">Nombre</string>
  <string name="hint_price">Precio</string>
  <string name="button_add">Agregar</string>
  <string name="button_add1">Agregar</string>
  <string name="button_get_sqlite">Ver SQLite</string>
  <string name="button_get_firebase">Ver Firebase</string>
  <string name="button_synchronize_firebase">Sincronizar Firebase</string>
  <!-- String del layout de los items -->
  <string name="item_button_add">Editar</string>
  <string name="item_button_delete">Eliminar</string>

  <string name="home_view_title">Vista del Home</string>
  <string name="firebase_examples_title">Ejemplos Firebase</string>
  <string name="firestore_button">Firestore</string>
  <string name="realtime_database_button">Realtime</string>
  <string name="app_title">TODOS A LA PIZZERIA</string>
  <string name="hint_nombre">Nombre pizza</string>
  <string name="hint_ingredientes">Ingredientes</string>
  <string name="btn_agregar_producto">Agregar producto</string>
  <string name="tv_database">Opciones de pizza</string>
  <string name="btn_mostrar_usuarios">Mostrar Pizzas</string>


  <!--  Strings del activity_register-->
  <string name="registration_title">Usuarios nuevos</string>
  <string name="name_hint">Nombre</string>
  <string name="new_email_hint">Correo electrónico</string>
  -->
  <!--   <string name="password_hint">Contraseña</string>  -->
  <string name="register_button_text">Registrar</string>
  <string name="login_button_text">Login</string>

  <!--  Strings del activity_addr-->
  <string name="btn_login">Regresar</string>
  <string name="text_size_form">20dp</string>
  <!-- Strings used for fragments for navigation -->
  <string name="first_fragment_label">First Fragment</string>
  <string name="second_fragment_label">Second Fragment</string>
  <string name="next">Next</string>
  <string name="previous">Previous</string>

  <string name="lorem_ipsum">
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
    volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus dui
    nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad litora
    torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend diam, vel
    rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a, ornare ex. Sed
    rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
    Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
    egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed neque.
    Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada fames ac ante
    ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae, molestie nibh.
    Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor bibendum, vel congue
    leo egestas.\n\n
    Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit amet
    auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel, molestie quam.
    Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer interdum nunc
    ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at lacinia sit amet,
    tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula, in lobortis sem porta
    sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque est.\n\n
    Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh. Morbi
    laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui non lorem.
    Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In eros nisl,
    imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc, quis imperdiet
    eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra ipsum. Nunc quis
    augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a placerat diam. Etiam
    vulputate dignissim convallis. Integer faucibus mauris sit amet finibus convallis.\n\n
    Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et malesuada
    fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa gravida.
    Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper, libero justo
    consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper sodales. Praesent
    bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus libero vel nunc consequat,
    quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus vestibulum. Fusce dictum libero
    quis erat maximus, vitae volutpat diam dignissim.
  </string>


</resources>